--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,57 @@
 # Compiled output
-out/
-dist/
+out
+dist
 *.vsix
 
 # Node modules
-node_modules/
-npm-debug.log*
+node_modules
 
-# VS Code
-.vscode/settings.json
-.vscode/launch.json
-.vscode/extensions.json
+# Test files
+.vscode-test/
+coverage/
+.nyc_output/
 
-# TypeScript
+# Build files
 *.tsbuildinfo
+.eslintcache
 
 # Logs
-logs/
 *.log
+npm-debug.log*
 
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
+# Audio files (recordings)
+*.wav
+*.mp3
+*.ogg
+*.m4a
 
-# Coverage directory used by tools like istanbul
-coverage/
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# API Keys (Sicherheit!)
+# Environment files
 .env
 .env.local
-.env.production
-*.key
+.env.*.local
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# IDE files
+.vscode/settings.json
+.idea/
+*.swp
+*.swo
+*~
 
 # Temporary files
+temp/
+tmp/
 *.tmp
-*.temp
+
+# Backup files
+*.bak
+*.backup
+
+# Scripts (werden nach Push nicht mehr benötigt)
+cleanup-final.ps1
+git-push.ps1
+PUSH-ANLEITUNG.md
