--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ coverage/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
 # Audio files (recordings)
 *.wav
@@ -38,14 +37,12 @@ lerna-debug.log*
 .DS_Store
 Thumbs.db
 desktop.ini
+
+# IDE files
+.idea/
 *.swp
 *.swo
 *~
-
-# IDE files
-.vscode/settings.json
-.idea/
-*.swp
 
 # Temporary files
 temp/
@@ -54,8 +51,9 @@ tmp/
 *.bak
 *.backup
 
-# Cleanup scripts (nach erstem Push nicht mehr nötig)
-cleanup-final.ps1
-final-cleanup.ps1
-PROJEKT-ANALYSE.md
-PUSH-ANLEITUNG.md
+# Backup files
+backup-*/
+
+# Cleanup scripts (nach cleanup)
+cleanup-*.ps1
+CLEANUP-PLAN.md
