--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
       },
       {
         "command": "voiceDocPlugin.toggleAutoMode",
-        "title": "Voice Doc: Auto-Modus umschalten",
-        "icon": "$(robot)"
+        "title": "Voice Doc: Auto-Modus umschalten (Projekt-Überwachung)",
+        "icon": "$(eye)"
       },
       {
         "command": "voiceDocPlugin.analyzeCurrentFunction",
@@ -100,6 +100,36 @@
         "command": "voiceDocPlugin.trainFromFeedback",
         "title": "Voice Doc: Aus Feedback lernen",
         "icon": "$(mortar-board)"
+      },
+      {
+        "command": "voiceDocPlugin.showDemoTutorial",
+        "title": "Voice Doc: Demo-Tutorial anzeigen",
+        "icon": "$(mortar-board)"
+      },
+      {
+        "command": "voiceDocPlugin.showDemoStats",
+        "title": "Voice Doc: Demo-Statistiken anzeigen",
+        "icon": "$(graph)"
+      },
+      {
+        "command": "voiceDocPlugin.toggleDemoMode",
+        "title": "Voice Doc: Demo-Modus umschalten",
+        "icon": "$(debug-start)"
+      },
+      {
+        "command": "voiceDocPlugin.toggleAutoComment",
+        "title": "Voice Doc: Auto-Kommentierung umschalten",
+        "icon": "$(robot)"
+      },
+      {
+        "command": "voiceDocPlugin.analyzeCurrentFile",
+        "title": "Voice Doc: Aktuelle Datei analysieren",
+        "icon": "$(search)"
+      },
+      {
+        "command": "voiceDocPlugin.test",
+        "title": "Voice Doc: Test-Befehle ausführen",
+        "icon": "$(beaker)"
       }
     ],
     "keybindings": [
@@ -223,6 +253,26 @@
             "Inline"
           ],
           "description": "Stil der generierten Kommentare"
+        },
+        "voiceDocPlugin.autoCommentMode": {
+          "type": "string",
+          "default": "off",
+          "enum": [
+            "off",
+            "on-save",
+            "on-type"
+          ],
+          "enumDescriptions": [
+            "Auto-Kommentierung deaktiviert",
+            "Kommentare beim Speichern hinzufügen",
+            "Kommentare während des Tippens hinzufügen"
+          ],
+          "description": "Auto-Kommentierungs-Modus"
+        },
+        "voiceDocPlugin.toggleAutoComment": {
+          "type": "boolean",
+          "default": false,
+          "description": "Auto-Kommentierung aktiviert"
         }
       }
     }
