--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,49 @@
 # Compiled output
-out
-dist
+out/
+dist/
 *.vsix
 
 # Node modules
-node_modules
+node_modules/
 
-# Test files
-.vscode-test/
-coverage/
-.nyc_output/
-
-# Build files
+# TypeScript cache
 *.tsbuildinfo
-.eslintcache
 
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Audio files (recordings)
-*.wav
-*.mp3
-*.ogg
-*.m4a
-*.aac
-
-# Environment files
-.env
-.env.local
-.env.*.local
+# VS Code
+.vscode/settings.json
+.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/tasks.json
 
 # OS files
 .DS_Store
 Thumbs.db
-desktop.ini
-
-# IDE files
-.idea/
-*.swp
-*.swo
-*~
-
-# Temporary files
-temp/
-tmp/
-*.tmp
-*.bak
-*.backup
 
 # Backup files
-backup-*/
+*.backup
+*.BACKUP.*
+*.IMPROVED.*
+*_UPDATED.*
+*.bak
 
-# Cleanup scripts (nach cleanup)
-cleanup-*.ps1
-CLEANUP-PLAN.md
+# Temp folders
+temp/
+tmp/
+backup-deleted-code/
+redundant/
+documented-versions/
+
+# Environment
+.env
+.env.local
+
+# Logs
+*.log
+npm-debug.log*
+
+# Test coverage
+coverage/
+
+# API Keys (wichtig!)
+.api-keys
+secrets/
